# crah-code-base

3d_engine/: Cargo.toml  rgb.txt
3d_engine/res/: player.mtl
3d_engine/src/: default.wgsl  lib.rs  main.rs  rgb.txt  user.rs
3d_engine/src/audio/: mod.rs
3d_engine/src/errors/: audio.rs  game.rs  graphics.rs  mod.rs  utils.rs
3d_engine/src/graphics/: bindgroup.rs  buffer.rs  instance.rs  mod.rs  pipeline.rs  render.rs  state.rs  surface.rs  texture.rs  window.rs
3d_engine/src/graphics/game/: camera.rs  controller.rs  entity.rs  interaction.rs  mod.rs  model.rs  scene.rs  vertex.rs
3d_engine/src/graphics/game/world/: mod.rs  sky.rs  terrain.rs
3d_engine/src/maths/: matrix.rs  mod.rs
3d_engine/src/physics/: body.rs  collition.rs  mod.rs  movement.rs
3d_engine/src/utils/: image.rs  mod.rs  obj_loader.rs  reader.rs  writer.rs
acreage/: Cargo.toml  README.md  uml.dia  uml.dia~
acreage/src/: access.rs  arena.rs  id.rs  iter.rs  lib.rs  node.rs
mess_with_3d_apis/: :w  Cargo.toml
mess_with_3d_apis/src/: data.txt  lib.rs  main.rs  monkey.mtl  plain_rgb.txt  plane.mtl  player.mtl  shader.wgsl  star.mtl  star.wgsl  ù
mess_with_3d_apis/src/core/: bindgroup.rs  buffer.rs  camera.rs  collition.rs  controller.rs  entity.rs  image.rs  instance.rs  interaction.rs  light.rs  mod.rs  objmodel.rs  pipeline.rs  star.rs  surface.rs  terrain.rs  texture.rs  vertex.rs  window.rs
mess_with_3d_apis/src/errors/: mod.rs
mess_with_3d_apis/src/utils/: environment.rs  mod.rs  printer.rs
website_2/: Cargo.toml  import_wasm.js  index.html  server.pl  style.css  style.css.map  style.scss  videos.html
website_2/src/: attributes.rs  consts.rs  errors.rs  generator.pl  lib.rs  main.rs  router.rs  tags.rs
website_2/src/components/: footer.rs  head.rs  header.rs  mod.rs
website_2/src/pages/: error.rs  get_involved.rs  home.rs  mod.rs  posts.rs  projects.rs  videos.rs
website_2/src/requests/: mod.rs
