[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"]}
cgmath = "0.18"
rand = "0.8.5"

winit = "0.28.3"
wgpu = "0.15.1"
tobj = { version = "3.2.1", features = ["async"]}
fbxcel-dom = "0.0.10"
rodio = "0.17.1"

image = "0.24"
eframe = "0.21.0"
egui = "0.21.0"

anyhow = "1.0.71"
thiserror = "1.0.40"
