[package]
name = "html_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.64", features=["HtmlVideoElement","MouseEvent","HtmlCollection", "Window", "Document", "Element", 'HtmlElement','Node','HtmlImageElement', "Text", "HtmlIFrameElement"]}
reqwasm = "0.5.0"
serde = "1.0.164"
serde_json = "1.0.97"
pollster = "0.3.0"
#reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
console_error_panic_hook = "0.1.7"
futures = "0.3" # for our async / await blocks
#tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
wasm-bindgen-futures = "0.4.37"
thiserror = "1.0.40"
anyhow = "1.0.71"